@@ -1,9 +1,10 @@
 package destiny.secretsofthevoid.capabilities;
 
+import com.github.alexmodguy.alexscaves.server.entity.ACEntityRegistry;
 import com.mojang.datafixers.util.Pair;
-import destiny.secretsofthevoid.helper.IAirTank;
+import destiny.secretsofthevoid.helper.IBacktank;
 import destiny.secretsofthevoid.helper.IFlippers;
-import destiny.secretsofthevoid.helper.IRebreather;
+import destiny.secretsofthevoid.helper.IMask;
 import destiny.secretsofthevoid.init.NetworkInit;
 import destiny.secretsofthevoid.network.packets.SoundPackets;
 import destiny.secretsofthevoid.network.packets.UpdateDivingPacket;
@@ -11,7 +12,6 @@ import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
@@ -23,21 +23,21 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 
-public class DivingCapability implements INBTSerializable<CompoundTag>
+public class    DivingCapability implements INBTSerializable<CompoundTag>
 {
     public static final String OXYGEN = "oxygen";
     public static final String MAX_OXYGEN = "maxOxygen";
-    public static final String OXYGEN_EFFICIENCY = "oxygenEfficiency";
+    public static final String MASK_EFFICIENCY = "maskEfficiency";
     public static final String SWIMMING_SPEED = "swimmingSpeed";
     public static final String REFILL_SOUND = "refillSound";
 
     public double oxygen = 0.0;
     public double maxOxygen = 0.0;
-    public double oxygenEfficiency = 0.0;
+    public double maskEfficiency = 0.0;
     public double swimmingSpeed = 0.0;
     public boolean refillSound = false;
-    public int inhaleTicker = 0;
-    public int exhaleTicker = -1;
+    public int intakeTicker = 0;
+    public int expelTicker = -1;
     public int bubbleTicker = -1;
 
     public final double oxygenDepthModifier = 0.02;
@@ -58,7 +58,7 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
         //Tank
         calculateMaxOxygen(player);
         calculateStoredOxygen(player);
-        calculateOxygenEfficiency(player);
+        calculateMaskEfficiency(player);
         calculateDepthEfficiency(player);
         refillTank(player);
 
@@ -77,7 +77,7 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
     {
         return player.canDrownInFluidType(player.getEyeInFluidType())
                 && getOxygen() > 0
-                && !getEquipmentAirTank(player, null).isEmpty()
+                && !getEquipmentBacktank(player, null).isEmpty()
                 && !player.getActiveEffects().contains(MobEffects.WATER_BREATHING);
     }
 
@@ -87,11 +87,11 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
     }
 
     public void refillTank(Player player) {
-        List<Pair<ItemStack, IAirTank>> sortedTanks = getEquipmentAirTank(player, Comparator.comparing(airTank -> airTank.getSecond().getMaxOxygen(airTank.getFirst())));
-        for(Pair<ItemStack, IAirTank> airTank : sortedTanks)
+        List<Pair<ItemStack, IBacktank>> backtanks = getEquipmentBacktank(player, Comparator.comparing(backtank -> backtank.getSecond().getMaxOxygen(backtank.getFirst())));
+        for(Pair<ItemStack, IBacktank> backtank : backtanks)
         {
-            ItemStack stack = airTank.getFirst();
-            IAirTank tank = airTank.getSecond();
+            ItemStack stack = backtank.getFirst();
+            IBacktank tank = backtank.getSecond();
 
             if (!player.getEyeInFluidType().canDrownIn(player) && getOxygen() < getMaxOxygen()) {
                 if (tank.getStoredOxygen(stack) != tank.getMaxOxygen(stack)) {
@@ -112,36 +112,36 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
         if (player.getY() < 64) {
             double depth = (64 - player.getY()) * oxygenDepthModifier;
 
-            setOxygenEfficiency(getOxygenEfficiency() + depth);
+            setMaskEfficiency(getMaskEfficiency() + depth);
         }
     }
 
     public void consumeOxygen(Level level, Player player)
     {
-        List<Pair<ItemStack, IAirTank>> sortedTanks = getEquipmentAirTank(player, Comparator.comparing(airTank -> airTank.getSecond().getStoredOxygen(airTank.getFirst())));
-        Pair<ItemStack, IAirTank> airTank = sortedTanks.get(0);
-        ItemStack stack = airTank.getFirst();
-        IAirTank tank = airTank.getSecond();
+        List<Pair<ItemStack, IBacktank>> backtanks = getEquipmentBacktank(player, Comparator.comparing(backtank -> backtank.getSecond().getStoredOxygen(backtank.getFirst())));
+        Pair<ItemStack, IBacktank> backtank = backtanks.get(0);
+        ItemStack stack = backtank.getFirst();
+        IBacktank tank = backtank.getSecond();
 
-        if (inhaleTicker > 200) {
-            tank.setStoredOxygen(stack, Math.max(0, tank.getStoredOxygen(stack) - (oxygenPerBreath * getOxygenEfficiency())));
+        if (intakeTicker > 200) {
+            tank.setStoredOxygen(stack, Math.max(0, tank.getStoredOxygen(stack) - (oxygenPerBreath * getMaskEfficiency())));
 
-            if(!getEquipmentRebreather(player, null).isEmpty()) {
+            if(!getEquipmentMask(player, null).isEmpty()) {
                 NetworkInit.sendTo((ServerPlayer) player, new SoundPackets.RebreatherInhale(player.blockPosition()));
             }
 
-            inhaleTicker = 0;
-            exhaleTicker = 0;
-        } else inhaleTicker++;
+            intakeTicker = 0;
+            expelTicker = 0;
+        } else intakeTicker++;
 
-        if (exhaleTicker > 60)
+        if (expelTicker > 60)
         {
             NetworkInit.sendTo((ServerPlayer) player, new SoundPackets.RebreatherExhale(player.blockPosition()));
 
-            exhaleTicker = -1;
+            expelTicker = -1;
             bubbleTicker = 0;
-        } else if (exhaleTicker >= 0) {
-            exhaleTicker++;
+        } else if (expelTicker >= 0) {
+            expelTicker++;
         }
 
         if (bubbleTicker > 60) {
@@ -167,18 +167,18 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
     {
         if(level != null && !level.isClientSide() && player instanceof ServerPlayer serverPlayer)
         {
-            NetworkInit.sendTo(serverPlayer, new UpdateDivingPacket(getOxygen(), getMaxOxygen(), getOxygenEfficiency()));
+            NetworkInit.sendTo(serverPlayer, new UpdateDivingPacket(getOxygen(), getMaxOxygen(), getMaskEfficiency()));
         }
     }
 
     public void calculateMaxOxygen(Player player) {
-        List<Pair<ItemStack, IAirTank>> airTanks = getEquipmentAirTank(player, null);
+        List<Pair<ItemStack, IBacktank>> backtanks = getEquipmentBacktank(player, null);
         double maxOxygen = 0.0D;
 
-        for(Pair<ItemStack, IAirTank> airTank : airTanks)
+        for(Pair<ItemStack, IBacktank> backtank : backtanks)
         {
-            ItemStack stack = airTank.getFirst();
-            IAirTank tank = airTank.getSecond();
+            ItemStack stack = backtank.getFirst();
+            IBacktank tank = backtank.getSecond();
 
             maxOxygen += tank.getMaxOxygen(stack);
         }
@@ -187,44 +187,44 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
     }
 
     public void calculateStoredOxygen(Player player) {
-        List<Pair<ItemStack, IAirTank>> airTanks = getEquipmentAirTank(player, null);
+        List<Pair<ItemStack, IBacktank>> backtanks = getEquipmentBacktank(player, null);
 
         double storedOxygen = 0.0D;
-        for(Pair<ItemStack, IAirTank> airTank : airTanks)
+        for(Pair<ItemStack, IBacktank> backtank : backtanks)
         {
-            ItemStack stack = airTank.getFirst();
-            IAirTank tank = airTank.getSecond();
+            ItemStack stack = backtank.getFirst();
+            IBacktank tank = backtank.getSecond();
 
             storedOxygen += tank.getStoredOxygen(stack);
         }
         setOxygen(storedOxygen);
 
-        if(!airTanks.isEmpty()) {
-            fillTanks(getEquipmentAirTank(player, Comparator.comparing(airTank -> airTank.getSecond().getMaxOxygen(airTank.getFirst()))), storedOxygen);
+        if(!backtanks.isEmpty()) {
+            fillTanks(getEquipmentBacktank(player, Comparator.comparing(backtank -> backtank.getSecond().getMaxOxygen(backtank.getFirst()))), storedOxygen);
         }
     }
     
-    public void calculateOxygenEfficiency(Player player)
+    public void calculateMaskEfficiency(Player player)
     {
-        double oxygenEfficiency = 0.0D;
-        List<Pair<ItemStack, IRebreather>> rebreathers = getEquipmentRebreather(player, null);
-        for(Pair<ItemStack, IRebreather> rebreather : rebreathers)
+        double maskEfficiency = 0.0D;
+        List<Pair<ItemStack, IMask>> masks = getEquipmentMask(player, null);
+        for(Pair<ItemStack, IMask> mask : masks)
         {
-            ItemStack stack = rebreather.getFirst();
-            IRebreather rebreath = rebreather.getSecond();
+            ItemStack stack = mask.getFirst();
+            IMask maskInternal = mask.getSecond();
 
-            oxygenEfficiency += rebreath.getOxygenEfficiency(stack);
+            maskEfficiency += maskInternal.getMaskEfficiency(stack);
         }
 
-        setOxygenEfficiency(oxygenEfficiency);
+        setMaskEfficiency(maskEfficiency);
     }
     
-    public List<Pair<ItemStack, IAirTank>> getEquipmentAirTank(Player player, @Nullable Comparator<Pair<ItemStack, IAirTank>> comparator)
+    public List<Pair<ItemStack, IBacktank>> getEquipmentBacktank(Player player, @Nullable Comparator<Pair<ItemStack, IBacktank>> comparator)
     {
-        List<Pair<ItemStack, IAirTank>> equipmentList = new ArrayList<>();
+        List<Pair<ItemStack, IBacktank>> equipmentList = new ArrayList<>();
         for (ItemStack stack : player.getArmorSlots())
         {
-            if (stack.getItem() instanceof IAirTank tank)
+            if (stack.getItem() instanceof IBacktank tank)
                 equipmentList.add(new Pair<>(stack, tank));
         }
 
@@ -233,12 +233,12 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
         return equipmentList;
     }
 
-    public List<Pair<ItemStack, IRebreather>> getEquipmentRebreather(Player player, @Nullable Comparator<Pair<ItemStack, IRebreather>> comparator)
+    public List<Pair<ItemStack, IMask>> getEquipmentMask(Player player, @Nullable Comparator<Pair<ItemStack, IMask>> comparator)
     {
-        List<Pair<ItemStack, IRebreather>> equipmentList = new ArrayList<>();
+        List<Pair<ItemStack, IMask>> equipmentList = new ArrayList<>();
         for (ItemStack stack : player.getArmorSlots())
         {
-            if (stack.getItem() instanceof IRebreather rebreather)
+            if (stack.getItem() instanceof IMask rebreather)
                 equipmentList.add(new Pair<>(stack, rebreather));
         }
 
@@ -261,13 +261,13 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
         return equipmentList;
     }
 
-    public void fillTanks(List<Pair<ItemStack, IAirTank>> airTanks, double storedOxygen)
+    public void fillTanks(List<Pair<ItemStack, IBacktank>> backtanks, double storedOxygen)
     {
         for(double i = storedOxygen; i > 0D;) {
-            for(Pair<ItemStack, IAirTank> airTank : airTanks)
+            for(Pair<ItemStack, IBacktank> backtank : backtanks)
             {
-                ItemStack stack = airTank.getFirst();
-                IAirTank tank = airTank.getSecond();
+                ItemStack stack = backtank.getFirst();
+                IBacktank tank = backtank.getSecond();
                 double maxCapacity = tank.getMaxOxygen(stack);
 
                 tank.setStoredOxygen(stack, Math.min(storedOxygen, maxCapacity));
@@ -282,7 +282,7 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
 
         tag.putDouble(OXYGEN, oxygen);
         tag.putDouble(MAX_OXYGEN, maxOxygen);
-        tag.putDouble(OXYGEN_EFFICIENCY, oxygenEfficiency);
+        tag.putDouble(MASK_EFFICIENCY, maskEfficiency);
         tag.putDouble(SWIMMING_SPEED, swimmingSpeed);
         tag.putBoolean(REFILL_SOUND, refillSound);
 
@@ -294,7 +294,7 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
     {
         this.oxygen = tag.getDouble(OXYGEN);
         this.maxOxygen = tag.getDouble(MAX_OXYGEN);
-        this.oxygenEfficiency = tag.getDouble(OXYGEN_EFFICIENCY);
+        this.maskEfficiency = tag.getDouble(MASK_EFFICIENCY);
         this.swimmingSpeed = tag.getDouble(SWIMMING_SPEED);
         this.refillSound = tag.getBoolean(REFILL_SOUND);
     }
@@ -317,13 +317,13 @@ public class DivingCapability implements INBTSerializable<CompoundTag>
         this.maxOxygen = maxOxygen;
     }
 
-    public double getOxygenEfficiency()
+    public double getMaskEfficiency()
     {
-        return oxygenEfficiency;
+        return maskEfficiency;
     }
-    public void setOxygenEfficiency(double oxygenEfficiency)
+    public void setMaskEfficiency(double maskEfficiency)
     {
-        this.oxygenEfficiency = Math.max(0.1, oxygenEfficiency);
+        this.maskEfficiency = Math.max(0.1, maskEfficiency);
     }
 
     public double getSwimmingSpeed()
